--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "Apoorva_Portfolio_2",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.19.0",
+    "npm": "6.14.8"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
