--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.19.0",
+    "npm": "6.14.8"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -25,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001" ,
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
