--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
     "node": "12.19.0",
     "npm": "6.14.8"
   },
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +20,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-mailer": "^0.3.1"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.19.1"
   }
 }
