--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.17.1",
-    "express-mailer": "^0.3.1"
+    "express-mailer": "^0.3.1",
+    "gh-pages": "^3.2.3"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
