--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
     "dotenv": "^10.0.0",
     "downloadjs": "^1.4.7",
     "express": "^4.17.1",
-    "express-mailer": "^0.3.1",
-    "gh-pages": "^3.2.3"
-  },
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.19.1"
+    "express-mailer": "^0.3.1"
   }
+ 
 }
